--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flangapp_app"
+        applicationId "in.indplay.app"
         minSdkVersion 17
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -68,9 +68,9 @@ android {
     signingConfigs {
         release {
             storeFile file("sign/key.jks")
-            storePassword "EMrNEJbNkbPs"
-            keyAlias "tadapp_android_e"
-            keyPassword "EMrNEJbNkbPs"
+            storePassword "96968686"
+            keyAlias "indplay"
+            keyPassword "96968686"
         }
     }
 
