update for file android/app/build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,7 +69,7 @@ android {
         release {
             storeFile file("sign/key.jks")
             storePassword "96968686"
-            keyAlias "indplay"
+            keyAlias "IndPlay"
             keyPassword "96968686"
         }
     }
